logs/param/build.make.101.log.stderr
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:11:1: error: ‘turtlesim’ does not name a type
 turtlesim::Pose turtle_pose;
 ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:12:8: error: redefinition of ‘double pi’
 double pi = 3.14;
        ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:7:8: note: ‘double pi’ previously defined here
 double pi = 3.1415926535897;
        ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:13:22: error: ‘turtlesim’ does not name a type
 void positionT(const turtlesim::Pose& k){
                      ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:13:37: error: expected unqualified-id before ‘&’ token
 void positionT(const turtlesim::Pose& k){
                                     ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:13:37: error: expected ‘)’ before ‘&’ token
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:13:39: error: expected initializer before ‘k’
 void positionT(const turtlesim::Pose& k){
                                       ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:25:61: error: ‘positionT’ was not declared in this scope
   ros::Subscriber sub = nh.subscribe("turtle1/pose", 1000, &positionT);
                                                             ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:37:13: error: ‘turtle_pose’ was not declared in this scope
     ppose = turtle_pose.theta;
             ^
make[2]: *** [CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_spiral.dir/all] Error 2
make: *** [all] Error 2
